loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:1: error: Missing closing brace `}' assumed here
var Biscuits = 0
^Poucet2:8: error: ';' expected but 'while' found.
  }while(crossing())
   ^Poucet2:15: error: 'while' expected but identifier found.
avance() 
^Poucet2:17: error: '(' expected but '}' found.
	}
        ^